<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.com.gpaiter.curriculumposasd.activitys.CadastrarExperienciaProfissionalActivity">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <TextView android:text="@string/descricao" android:paddingTop="15dp" />
        <EditText
            android:id="@+id/descricao"
            android:inputType="text" >
        </EditText>

        <TextView android:text="@string/inicio" android:paddingTop="15dp" />
        <EditText
            android:id="@+id/inicio"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="4">
        </EditText>

        <TextView android:text="@string/termino" android:paddingTop="15dp" />
        <EditText
            android:id="@+id/termino"
            android:inputType="number"
            android:numeric="integer"
            android:maxLength="4">
        </EditText>


        <Button
            android:layout_marginTop="20dp"
            android:onClick="salvarFormacaoAcademica"
            android:text="@string/salvar" />


    </TableLayout>



</ScrollView>
